# sophon-wasm

./: Cargo.toml  README.md
benches/: interpreter.rs
examples/: build.rs  data.rs  exports.rs  info.rs  inject.rs  interpret.rs  invoke.rs  roundtrip.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deserialize.rs
pwasm-emscripten/: Cargo.toml
pwasm-emscripten/src/: lib.rs
spec/: Cargo.toml
spec/src/: fixtures.rs  lib.rs  run.rs
src/builder/: module.rs
src/interpreter/: native.rs
